update to sales

--- a/Commishes/Main/NS_Expense.ipynb
+++ b/Commishes/Main/NS_Expense.ipynb
@@ -1777,7 +1777,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "se2.to_excel('NS_Expense_2022.xlsx')"
+    "se2.to_excel('NS_Expense_August_2022.xlsx')"
    ]
   },
   {
