--- a/Commishes/Main/Main.ipynb
+++ b/Commishes/Main/Main.ipynb
@@ -4,7 +4,6 @@
    "cell_type": "markdown",
    "id": "840fb76c-0eb4-48dd-b165-40fd6f8cfd48",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1721,7 +1720,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "jonathan_malcolm.loc[111111] = ['Payout:', miceli , '' , '' , '' , '' , '' , '' , '' , '' , '' , '']"
+    "mike_miceli.loc[111111] = ['Payout:', miceli , '' , '' , '' , '' , '' , '' , '' , '' , '' , '']"
    ]
   },
   {
@@ -1746,6 +1745,7 @@
    "cell_type": "markdown",
    "id": "e58caed8-f8a8-46f4-99b9-2817e93588be",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1754,8 +1754,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2c9031c8-3b5d-4297-9ae9-b30c75a65c1c",
+   "execution_count": 37,
+   "id": "9d247ead-7a81-47a2-bafc-1efe03dfd9cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1764,10 +1764,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a0fd5941-ea92-49f6-9731-80c0f3436dbb",
+   "execution_count": 38,
+   "id": "707f002b-19e0-4a40-8115-97476914ecd8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11110.0"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "(tiffany_dunson['payout'].sum())"
    ]
@@ -1775,7 +1786,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32054b6d-e453-4ff3-b88a-7064381d2f01",
+   "id": "0e2bd6e6-96e3-41b8-ad7e-25e3e9bb5104",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1786,31 +1797,55 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9275c95e-830f-4de3-b1a0-9af905d7f008",
+   "id": "80116860-69b7-4b3c-b057-1fa959aeb20d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dunson_payout = (tiffany_dunson['payout'].sum())"
+    "#mike_miceli.loc[odaine_hudson['Type'].isin(['New']), 'payout'] *= .75"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5df9156-3549-499e-b00b-b9baa267c864",
+   "id": "c5a90852-ac42-48b4-a9f8-fe2a19360706",
    "metadata": {},
    "outputs": [],
    "source": [
-    "tiffany_dunson.loc[111111] = ['Payout:', dunson_payout , '' , '' , '' , '' , '' , '' , '' , '' , '' , '']"
+    "dunson = (tiffany_dunson['payout'].sum())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1913f963-1b52-4fed-8d53-db97eac4905e",
+   "id": "ef5b1bab-62f4-4558-aa64-99a3bf2f62d4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#tiffany_dunson.to_excel('malc.xlsx', index=False)"
+    "if qqq == \"y\":\n",
+    "    pass\n",
+    "else:\n",
+    "    pass\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "447b40d4-6003-4d4b-8cee-4e3e52a8cdac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tiffany_dunson.loc[111111] = ['Payout:', dunson , '' , '' , '' , '' , '' , '' , '' , '' , '' , '']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3320593f-3372-48bd-97c0-f19d406062e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#tiffany_dunson.to_excel('Dunson_September_2022.xlsx', index=False)"
    ]
   },
   {
@@ -1839,7 +1874,7 @@
     "tags": []
    },
    "source": [
-    "### Patrick Chapa"
+    "#### Patrick Chapa"
    ]
   },
   {
