--- a/Commishes/Main/Account_Execs.ipynb
+++ b/Commishes/Main/Account_Execs.ipynb
@@ -231,17 +231,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "6e57c9b9-1a22-4bb4-a12a-38411325f96f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Organization</th>\n",
+       "      <th>Order #</th>\n",
+       "      <th>Order Date</th>\n",
+       "      <th>Salesman</th>\n",
+       "      <th>Order Summary</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>Term</th>\n",
+       "      <th>Datacenter</th>\n",
+       "      <th>payout</th>\n",
+       "      <th>MRR</th>\n",
+       "      <th>Service Type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>643</th>\n",
+       "      <td>DQE Communications</td>\n",
+       "      <td>68796</td>\n",
+       "      <td>2022-10-13</td>\n",
+       "      <td>Samuel Mickler</td>\n",
+       "      <td>Copy of DQE - PIT1 - XC to Zayo - 10.13.22</td>\n",
+       "      <td>Change Order</td>\n",
+       "      <td>12</td>\n",
+       "      <td>PIT1</td>\n",
+       "      <td>250.0</td>\n",
+       "      <td>250.0</td>\n",
+       "      <td>xConnect</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>644</th>\n",
+       "      <td>DQE Communications</td>\n",
+       "      <td>68796</td>\n",
+       "      <td>2022-10-13</td>\n",
+       "      <td>Samuel Mickler</td>\n",
+       "      <td>Copy of DQE - PIT1 - XC to Zayo - 10.13.22</td>\n",
+       "      <td>Change Order</td>\n",
+       "      <td>12</td>\n",
+       "      <td>PIT1</td>\n",
+       "      <td>250.0</td>\n",
+       "      <td>250.0</td>\n",
+       "      <td>xConnect</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1726</th>\n",
+       "      <td>Redcard Systems, LLC</td>\n",
+       "      <td>68785</td>\n",
+       "      <td>2022-10-31</td>\n",
+       "      <td>Samuel Mickler</td>\n",
+       "      <td>Copy of RedCard - MCI2 - New 5kw Cabinet - 10....</td>\n",
+       "      <td>Change Order</td>\n",
+       "      <td>12</td>\n",
+       "      <td>MCI2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Space</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1727</th>\n",
+       "      <td>Redcard Systems, LLC</td>\n",
+       "      <td>68785</td>\n",
+       "      <td>2022-10-31</td>\n",
+       "      <td>Samuel Mickler</td>\n",
+       "      <td>Copy of RedCard - MCI2 - New 5kw Cabinet - 10....</td>\n",
+       "      <td>Change Order</td>\n",
+       "      <td>12</td>\n",
+       "      <td>MCI2</td>\n",
+       "      <td>390.0</td>\n",
+       "      <td>390.0</td>\n",
+       "      <td>Space</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1728</th>\n",
+       "      <td>Redcard Systems, LLC</td>\n",
+       "      <td>68785</td>\n",
+       "      <td>2022-10-31</td>\n",
+       "      <td>Samuel Mickler</td>\n",
+       "      <td>Copy of RedCard - MCI2 - New 5kw Cabinet - 10....</td>\n",
+       "      <td>Change Order</td>\n",
+       "      <td>12</td>\n",
+       "      <td>MCI2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>xConnect</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Organization Order # Order Date        Salesman  \\\n",
+       "643     DQE Communications   68796 2022-10-13  Samuel Mickler   \n",
+       "644     DQE Communications   68796 2022-10-13  Samuel Mickler   \n",
+       "1726  Redcard Systems, LLC   68785 2022-10-31  Samuel Mickler   \n",
+       "1727  Redcard Systems, LLC   68785 2022-10-31  Samuel Mickler   \n",
+       "1728  Redcard Systems, LLC   68785 2022-10-31  Samuel Mickler   \n",
+       "\n",
+       "                                          Order Summary          Type  Term  \\\n",
+       "643          Copy of DQE - PIT1 - XC to Zayo - 10.13.22  Change Order    12   \n",
+       "644          Copy of DQE - PIT1 - XC to Zayo - 10.13.22  Change Order    12   \n",
+       "1726  Copy of RedCard - MCI2 - New 5kw Cabinet - 10....  Change Order    12   \n",
+       "1727  Copy of RedCard - MCI2 - New 5kw Cabinet - 10....  Change Order    12   \n",
+       "1728  Copy of RedCard - MCI2 - New 5kw Cabinet - 10....  Change Order    12   \n",
+       "\n",
+       "     Datacenter  payout    MRR Service Type  \n",
+       "643        PIT1   250.0  250.0     xConnect  \n",
+       "644        PIT1   250.0  250.0     xConnect  \n",
+       "1726       MCI2     0.0    0.0        Space  \n",
+       "1727       MCI2   390.0  390.0        Space  \n",
+       "1728       MCI2     0.0    0.0     xConnect  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "samuel_mickler.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "af71094f-f993-4e8d-b48b-6fa7697d362a",
    "metadata": {},
    "outputs": [],
@@ -251,17 +388,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "c8c658e9-e975-48ec-bfda-069142eced50",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Organization</th>\n",
+       "      <th>Order #</th>\n",
+       "      <th>Order Date</th>\n",
+       "      <th>Salesman</th>\n",
+       "      <th>Order Summary</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>Term</th>\n",
+       "      <th>Datacenter</th>\n",
+       "      <th>payout</th>\n",
+       "      <th>MRR</th>\n",
+       "      <th>Service Type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>643</th>\n",
+       "      <td>DQE Communications</td>\n",
+       "      <td>68796</td>\n",
+       "      <td>2022-10-13</td>\n",
+       "      <td>Samuel Mickler</td>\n",
+       "      <td>Copy of DQE - PIT1 - XC to Zayo - 10.13.22</td>\n",
+       "      <td>Change Order</td>\n",
+       "      <td>12</td>\n",
+       "      <td>PIT1</td>\n",
+       "      <td>250.0</td>\n",
+       "      <td>250.0</td>\n",
+       "      <td>xConnect</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>644</th>\n",
+       "      <td>DQE Communications</td>\n",
+       "      <td>68796</td>\n",
+       "      <td>2022-10-13</td>\n",
+       "      <td>Samuel Mickler</td>\n",
+       "      <td>Copy of DQE - PIT1 - XC to Zayo - 10.13.22</td>\n",
+       "      <td>Change Order</td>\n",
+       "      <td>12</td>\n",
+       "      <td>PIT1</td>\n",
+       "      <td>250.0</td>\n",
+       "      <td>250.0</td>\n",
+       "      <td>xConnect</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1727</th>\n",
+       "      <td>Redcard Systems, LLC</td>\n",
+       "      <td>68785</td>\n",
+       "      <td>2022-10-31</td>\n",
+       "      <td>Samuel Mickler</td>\n",
+       "      <td>Copy of RedCard - MCI2 - New 5kw Cabinet - 10....</td>\n",
+       "      <td>Change Order</td>\n",
+       "      <td>12</td>\n",
+       "      <td>MCI2</td>\n",
+       "      <td>390.0</td>\n",
+       "      <td>390.0</td>\n",
+       "      <td>Space</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1729</th>\n",
+       "      <td>Redcard Systems, LLC</td>\n",
+       "      <td>68785</td>\n",
+       "      <td>2022-10-31</td>\n",
+       "      <td>Samuel Mickler</td>\n",
+       "      <td>Copy of RedCard - MCI2 - New 5kw Cabinet - 10....</td>\n",
+       "      <td>Change Order</td>\n",
+       "      <td>12</td>\n",
+       "      <td>MCI2</td>\n",
+       "      <td>575.0</td>\n",
+       "      <td>575.0</td>\n",
+       "      <td>Power</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1731</th>\n",
+       "      <td>Redcard Systems, LLC</td>\n",
+       "      <td>68785</td>\n",
+       "      <td>2022-10-31</td>\n",
+       "      <td>Samuel Mickler</td>\n",
+       "      <td>Copy of RedCard - MCI2 - New 5kw Cabinet - 10....</td>\n",
+       "      <td>Change Order</td>\n",
+       "      <td>12</td>\n",
+       "      <td>MCI2</td>\n",
+       "      <td>285.0</td>\n",
+       "      <td>285.0</td>\n",
+       "      <td>Power</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Organization Order # Order Date        Salesman  \\\n",
+       "643     DQE Communications   68796 2022-10-13  Samuel Mickler   \n",
+       "644     DQE Communications   68796 2022-10-13  Samuel Mickler   \n",
+       "1727  Redcard Systems, LLC   68785 2022-10-31  Samuel Mickler   \n",
+       "1729  Redcard Systems, LLC   68785 2022-10-31  Samuel Mickler   \n",
+       "1731  Redcard Systems, LLC   68785 2022-10-31  Samuel Mickler   \n",
+       "\n",
+       "                                          Order Summary          Type  Term  \\\n",
+       "643          Copy of DQE - PIT1 - XC to Zayo - 10.13.22  Change Order    12   \n",
+       "644          Copy of DQE - PIT1 - XC to Zayo - 10.13.22  Change Order    12   \n",
+       "1727  Copy of RedCard - MCI2 - New 5kw Cabinet - 10....  Change Order    12   \n",
+       "1729  Copy of RedCard - MCI2 - New 5kw Cabinet - 10....  Change Order    12   \n",
+       "1731  Copy of RedCard - MCI2 - New 5kw Cabinet - 10....  Change Order    12   \n",
+       "\n",
+       "     Datacenter  payout    MRR Service Type  \n",
+       "643        PIT1   250.0  250.0     xConnect  \n",
+       "644        PIT1   250.0  250.0     xConnect  \n",
+       "1727       MCI2   390.0  390.0        Space  \n",
+       "1729       MCI2   575.0  575.0        Power  \n",
+       "1731       MCI2   285.0  285.0        Power  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "samuel_mickler.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "83df021c-355d-402f-82b4-d986de75c16b",
    "metadata": {},
    "outputs": [],
@@ -273,17 +547,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "c2d260b3-868c-4941-8a70-dbc2734164fd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "875.0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "samuel_mickler['payout'].sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "b104b035-3862-42db-ae80-42f42c939a7c",
    "metadata": {},
    "outputs": [],
@@ -303,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "5b8c14a5-eb07-4ab7-8351-18ae92c4c185",
    "metadata": {},
    "outputs": [],
@@ -313,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "919293bc-a5b8-4fbe-a5fe-138c32f7326e",
    "metadata": {},
    "outputs": [],
@@ -323,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "98cca5ac-462e-49c2-90fb-53e147de7169",
    "metadata": {},
    "outputs": [],
@@ -334,11 +619,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fc776dd2-794b-48b0-aed2-1c37e4062068",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "writer = "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af6af032-d7f9-4015-ba29-eb2672fc963a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "42269cec-a8a3-4d33-99f4-082b88617f1b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "samuel_mickler.to_excel(os.path.join('../Output','Mickler_November_2022.xlsx'), index=False)"
+    "#samuel_mickler.to_excel(os.path.join('../Output','Mickler_November_2022.xlsx'), index=False)"
    ]
   },
   {
