--- a/Commishes/Main/Main.ipynb
+++ b/Commishes/Main/Main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "id": "79d6c906-5e45-4299-a871-db3fc1499ab5",
    "metadata": {},
    "outputs": [],
@@ -92,16 +92,16 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>ADP</td>\n",
-       "      <td>62450</td>\n",
-       "      <td>2022-08-02 18:25:06.877</td>\n",
-       "      <td>Paul Attallah</td>\n",
-       "      <td>Cross Connect : CAT6E</td>\n",
-       "      <td>New</td>\n",
-       "      <td>12</td>\n",
-       "      <td>SAN1</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
+       "      <td>Accudata Systems Inc.- Triple S Steel</td>\n",
+       "      <td>69092</td>\n",
+       "      <td>2022-10-19</td>\n",
+       "      <td>Ryan Popkin</td>\n",
+       "      <td>Accudata / XC Triple S / Houston</td>\n",
+       "      <td>Existing</td>\n",
+       "      <td>36</td>\n",
+       "      <td>HOU1</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>200.0</td>\n",
        "      <td>xConnect</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -109,11 +109,14 @@
        "</div>"
       ],
       "text/plain": [
-       "  Organization Order #              Order Date        Salesman  \\\n",
-       "0          ADP   62450 2022-08-02 18:25:06.877  Paul Attallah    \n",
+       "                            Organization Order # Order Date     Salesman  \\\n",
+       "0  Accudata Systems Inc.- Triple S Steel   69092 2022-10-19  Ryan Popkin   \n",
        "\n",
-       "           Order Summary Type  Term Datacenter  payout    MRR Service Type  \n",
-       "0  Cross Connect : CAT6E  New    12       SAN1   100.0  100.0     xConnect  "
+       "                      Order Summary      Type  Term Datacenter  payout    MRR  \\\n",
+       "0  Accudata / XC Triple S / Houston  Existing    36       HOU1   200.0  200.0   \n",
+       "\n",
+       "  Service Type  \n",
+       "0     xConnect  "
       ]
      },
      "execution_count": 4,
@@ -233,99 +236,99 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>ADP</td>\n",
-       "      <td>62450</td>\n",
-       "      <td>2022-08-02 18:25:06.877</td>\n",
-       "      <td>Paul Attallah</td>\n",
-       "      <td>Cross Connect : CAT6E</td>\n",
-       "      <td>New</td>\n",
-       "      <td>12</td>\n",
-       "      <td>SAN1</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
+       "      <td>Accudata Systems Inc.- Triple S Steel</td>\n",
+       "      <td>69092</td>\n",
+       "      <td>2022-10-19</td>\n",
+       "      <td>Ryan Popkin</td>\n",
+       "      <td>Accudata / XC Triple S / Houston</td>\n",
+       "      <td>Existing</td>\n",
+       "      <td>36</td>\n",
+       "      <td>HOU1</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>200.0</td>\n",
        "      <td>xConnect</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>ADP</td>\n",
-       "      <td>65630</td>\n",
-       "      <td>2022-08-25 14:02:22.043</td>\n",
-       "      <td>Paul Attallah</td>\n",
-       "      <td>Cross Connect : CAT6E</td>\n",
-       "      <td>Change Order</td>\n",
-       "      <td>12</td>\n",
-       "      <td>SAN1</td>\n",
-       "      <td>-100.0</td>\n",
-       "      <td>-100.0</td>\n",
+       "      <td>Accudata Systems Inc.- Triple S Steel</td>\n",
+       "      <td>69841</td>\n",
+       "      <td>2022-10-30</td>\n",
+       "      <td>Ryan Popkin</td>\n",
+       "      <td>Accudata / XC - NOV / Houston</td>\n",
+       "      <td>New</td>\n",
+       "      <td>36</td>\n",
+       "      <td>HOU1</td>\n",
+       "      <td>275.0</td>\n",
+       "      <td>275.0</td>\n",
        "      <td>xConnect</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>ADP</td>\n",
-       "      <td>65630</td>\n",
-       "      <td>2022-08-25 14:02:22.043</td>\n",
-       "      <td>Paul Attallah</td>\n",
-       "      <td>Cross Connect : SMF</td>\n",
+       "      <td>AdvantMed</td>\n",
+       "      <td>69112</td>\n",
+       "      <td>2022-10-30</td>\n",
+       "      <td>Mike Miceli</td>\n",
+       "      <td>AdvantMed/Colocation (Cabinet B7 Power Upgrade...</td>\n",
        "      <td>Change Order</td>\n",
-       "      <td>12</td>\n",
-       "      <td>SAN1</td>\n",
-       "      <td>200.0</td>\n",
-       "      <td>200.0</td>\n",
-       "      <td>xConnect</td>\n",
+       "      <td>28</td>\n",
+       "      <td>SNA2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Space</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>AEG Vision</td>\n",
-       "      <td>65793</td>\n",
-       "      <td>2022-08-18 17:52:20.030</td>\n",
-       "      <td>Mark McCants</td>\n",
-       "      <td>Cross Connect : SMF</td>\n",
-       "      <td>Agent - Existing</td>\n",
-       "      <td>27</td>\n",
-       "      <td>DFW3</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>xConnect</td>\n",
+       "      <td>AdvantMed</td>\n",
+       "      <td>69112</td>\n",
+       "      <td>2022-10-30</td>\n",
+       "      <td>Mike Miceli</td>\n",
+       "      <td>AdvantMed/Colocation (Cabinet B7 Power Upgrade...</td>\n",
+       "      <td>Change Order</td>\n",
+       "      <td>28</td>\n",
+       "      <td>SNA2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Power</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Afiniti Inc.</td>\n",
-       "      <td>65824</td>\n",
-       "      <td>2022-08-31 14:08:54.787</td>\n",
-       "      <td>Phillip Berta</td>\n",
-       "      <td>Cross Connect : SMF</td>\n",
-       "      <td>New</td>\n",
-       "      <td>13</td>\n",
-       "      <td>IAD1</td>\n",
-       "      <td>200.0</td>\n",
-       "      <td>200.0</td>\n",
-       "      <td>xConnect</td>\n",
+       "      <td>AdvantMed</td>\n",
+       "      <td>69112</td>\n",
+       "      <td>2022-10-30</td>\n",
+       "      <td>Mike Miceli</td>\n",
+       "      <td>AdvantMed/Colocation (Cabinet B7 Power Upgrade...</td>\n",
+       "      <td>Change Order</td>\n",
+       "      <td>28</td>\n",
+       "      <td>SNA2</td>\n",
+       "      <td>-166.5</td>\n",
+       "      <td>-166.5</td>\n",
+       "      <td>Power</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Organization Order #              Order Date        Salesman  \\\n",
-       "0           ADP   62450 2022-08-02 18:25:06.877  Paul Attallah    \n",
-       "1           ADP   65630 2022-08-25 14:02:22.043  Paul Attallah    \n",
-       "2           ADP   65630 2022-08-25 14:02:22.043  Paul Attallah    \n",
-       "3    AEG Vision   65793 2022-08-18 17:52:20.030    Mark McCants   \n",
-       "4  Afiniti Inc.   65824 2022-08-31 14:08:54.787   Phillip Berta   \n",
+       "                            Organization Order # Order Date     Salesman  \\\n",
+       "0  Accudata Systems Inc.- Triple S Steel   69092 2022-10-19  Ryan Popkin   \n",
+       "1  Accudata Systems Inc.- Triple S Steel   69841 2022-10-30  Ryan Popkin   \n",
+       "2                              AdvantMed   69112 2022-10-30  Mike Miceli   \n",
+       "3                              AdvantMed   69112 2022-10-30  Mike Miceli   \n",
+       "4                              AdvantMed   69112 2022-10-30  Mike Miceli   \n",
        "\n",
-       "           Order Summary              Type  Term Datacenter  payout    MRR  \\\n",
-       "0  Cross Connect : CAT6E               New    12       SAN1   100.0  100.0   \n",
-       "1  Cross Connect : CAT6E      Change Order    12       SAN1  -100.0 -100.0   \n",
-       "2    Cross Connect : SMF      Change Order    12       SAN1   200.0  200.0   \n",
-       "3    Cross Connect : SMF  Agent - Existing    27       DFW3   100.0  100.0   \n",
-       "4    Cross Connect : SMF               New    13       IAD1   200.0  200.0   \n",
+       "                                       Order Summary          Type  Term  \\\n",
+       "0                   Accudata / XC Triple S / Houston      Existing    36   \n",
+       "1                      Accudata / XC - NOV / Houston           New    36   \n",
+       "2  AdvantMed/Colocation (Cabinet B7 Power Upgrade...  Change Order    28   \n",
+       "3  AdvantMed/Colocation (Cabinet B7 Power Upgrade...  Change Order    28   \n",
+       "4  AdvantMed/Colocation (Cabinet B7 Power Upgrade...  Change Order    28   \n",
        "\n",
-       "  Service Type  \n",
-       "0     xConnect  \n",
-       "1     xConnect  \n",
-       "2     xConnect  \n",
-       "3     xConnect  \n",
-       "4     xConnect  "
+       "  Datacenter  payout    MRR Service Type  \n",
+       "0       HOU1   200.0  200.0     xConnect  \n",
+       "1       HOU1   275.0  275.0     xConnect  \n",
+       "2       SNA2     0.0    0.0        Space  \n",
+       "3       SNA2     0.0    0.0        Power  \n",
+       "4       SNA2  -166.5 -166.5        Power  "
       ]
      },
      "execution_count": 7,
